--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Seabright Beverage Consulting" />
 <script type="application/ld+json">
-{"url":"https://seabrightbev.com/","@type":"WebSite","headline":"Seabright Beverage Consulting","name":"seabrightbev.com","@context":"https://schema.org"}</script>
+{"url":"https://bayareamarketing.github.io/","@type":"WebSite","headline":"Seabright Beverage Consulting","name":"bayareamarketing.github.io","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
   </head>
