--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </header>
 
 
-<h2 id="what-do-we-do">What do we do?</h2>
+<h2 id="what-do-we-do" style="clear:both">What do we do?</h2>
 <ul>
   <li>Beverage Formulation (alcoholic and non-alcoholic)</li>
   <li>Regulatory Compliance (California State and Federal)</li>
