--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </header>
 
 
-<h2 id="what-do-we-do" style="clear:both">What do we do?</h2>
+<h2 id="what-do-we-do" style="marign-top: 75pt">What do we do?</h2>
 <ul>
   <li>Beverage Formulation (alcoholic and non-alcoholic)</li>
   <li>Regulatory Compliance (California State and Federal)</li>
@@ -86,7 +86,7 @@ registration &amp; regulation, batch/cut by weight or volume, miscibility/contra
 
       </section>
 
-      <footer>
+      <footer style="background:none; margin-top: 10pt">
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             
