--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ registration &amp; regulation, batch/cut by weight or volume, miscibility/contra
 <br />
       </section>
 
-      <footer style="background:none; margin-top: 10pt">
+      <footer style="background:none">
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             
