--- a/index.html
+++ b/index.html
@@ -58,6 +58,20 @@
 
 <h2 id="areas-of-extensive-practical-experience">Areas of Extensive Practical Experience</h2>
 <ul>
+  <li>General
+    <ul>
+      <li>Beverage Formulation</li>
+      <ul><li>Spirits: Rum, Gin, Flavored Vodka, Whiskey</li>
+        <li>RTD: Sodas, Seltzers, Canned Cocktails</li>
+        <li>Non-Alcoholic: Sparking Beverages, Energy Drinks, Healthy / Organic / Natural</li></ul>
+      <li>DSP &amp; Lab Best Practices</li>
+      <li>Compliance logging</li>
+      <li>Density meter maintenance</li>
+      <li>FDA registration &amp; regulation</li>
+      <li>Batch/cut by weight or volume</li>
+      <li>Miscibility/contraction issues</li>
+    </ul>
+  </li>
   <li>TTB / Federal
     <ul>
       <li>Bench distillation to TTB standards of high solids/sugar content spirits</li>
@@ -76,12 +90,7 @@
       <li>Excise tax returns</li>
     </ul>
   </li>
-  <li>General
-    <ul>
-      <li>DSP &amp; Lab Best Practices, compliance logging, density meter maintenance, FDA
-registration &amp; regulation, batch/cut by weight or volume, miscibility/contraction issues</li>
-    </ul>
-  </li>
+  
 </ul>
 <br />
       </section>
