--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </header>
 
 
-<h2 id="what-do-we-do" style="margin-top: 75pt">What do we do?</h2>
+<h2 id="what-do-we-do" style="margin-top: 75pt">Our Services At A Glance</h2>
 <ul>
   <li>Beverage Formulation (alcoholic and non-alcoholic)</li>
   <li>Regulatory Compliance (California State and Federal)</li>
@@ -64,7 +64,7 @@
       <ul><li>Spirits: Rum, Gin, Flavored Vodka, Whiskey</li>
         <li>RTD: Sodas, Seltzers, Canned Cocktails</li>
         <li>Non-Alcoholic: Sparking Beverages, Energy Drinks, Healthy / Organic / Natural</li></ul>
-      <li>DSP &amp; Lab Best Practices</li>
+      <li>Distillery &amp; Lab Best Practices</li>
       <li>Compliance logging</li>
       <li>Density meter maintenance</li>
       <li>FDA registration &amp; regulation</li>
