--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="google-site-verification" content="t11QXI5R5-1Z10TBxvQwVubm1d-YNmWuj7a3yMEK_mg" />
     <meta name="viewport" content="width=640">
 
     <link rel="stylesheet" href="/assets/css/style.css?v=a6ca78608c57b4631eafb7e426fff7750bc9525f" media="screen">
