--- a/index.html
+++ b/index.html
@@ -93,6 +93,24 @@
   </li>
   
 </ul>
+      <h2>Reach Out - We're Friendly</h2>
+      <form
+  action="https://formspree.io/f/mgepbjvq"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="text" name="_replyto">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+
+  <!-- your other form fields go here -->
+
+  <button type="submit">Send</button>
+</form>
 <br />
   <script src="https://formspree.io/js/formbutton-v1.min.js" defer></script>
   <script>
