--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
       </header>
 
 
-<h2 id="what-do-we-do" style="margin-top: 75pt">Our Services At A Glance</h2>
+<h2 id="what-do-we-do" style="margin-top: 75pt">&nsbp; &nsbp; Our Services At A Glance</h2>
 <ul>
   <li>Beverage Formulation (alcoholic and non-alcoholic)</li>
   <li>Regulatory Compliance (California State and Federal)</li>
   <li>Distillery Operations Consulting</li>
 </ul>
 
-<h2 id="areas-of-extensive-practical-experience">Areas of Extensive Practical Experience</h2>
+<h2 id="areas-of-extensive-practical-experience">&nsbp; &nsbp; Areas of Extensive Practical Experience</h2>
 <ul>
   <li>General
     <ul>
@@ -93,22 +93,22 @@
   </li>
   
 </ul>
-      <h2>Reach Out - We're Friendly</h2>
+      <h2>&nsbp; &nsbp; Reach Out - We're Friendly</h2>
       <form
   action="https://formspree.io/f/mgepbjvq"
   method="POST"
->
+><p>
   <label>
     Your email:
     <input type="text" name="_replyto">
-  </label>
+        </label></p><p>
   <label>
     Your message:
     <textarea name="message"></textarea>
   </label>
-
+        </p>
   <!-- your other form fields go here -->
-
+<br />
   <button type="submit">Send</button>
 </form>
 <br />
