--- a/index.html
+++ b/index.html
@@ -97,19 +97,17 @@
       <form
   action="https://formspree.io/f/mgepbjvq"
   method="POST"
-><p>
-  <label>
-    Your email:
+>
+<table border="0">
+<tr><td>
+  Your email:</td><td>
     <input type="text" name="_replyto">
-        </label></p><p>
-  <label>
-    Your message:
+        </td></tr><tr><td>
+  
+        Your message:</td><td>
     <textarea name="message"></textarea>
-  </label>
-        </p>
-  <!-- your other form fields go here -->
-<br />
-  <button type="submit">Send</button>
+        </td><td><button type="submit">Send</button></td></tr>
+</table>
 </form>
 <br />
   <script src="https://formspree.io/js/formbutton-v1.min.js" defer></script>
