--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
   action="https://formspree.io/f/mgepbjvq"
   method="POST"
 >
-<table border="0">
+<table border="0" style="width: 70%; margin: 0 auto;">
 <tr><td>
   Your email:</td><td>
-    <input type="text" name="_replyto">
+    <input type="text" name="_replyto" style="width: 50%">
         </td></tr><tr><td>
   
         Your message:</td><td>
-    <textarea name="message"></textarea>
+    <textarea name="message" style="width: 50%"></textarea>
         </td><td><button type="submit">Send</button></td></tr>
 </table>
 </form>
