--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   
         Your message:</td><td>
     <textarea name="message" style="width: 50%"></textarea>
-        </td><td><button type="submit">Send</button></td></tr>
+  </td></tr><tr><td></td><td><button type="submit">Send</button></td></tr>
 </table>
 </form>
 <br />
