--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   action="https://formspree.io/f/mgepbjvq"
   method="POST"
 >
-<table border="0" style="width: 70%; margin: 0 auto;">
+<table border="0" style="padding-top: 10pt; width: 70%; margin: 0 auto; margin-top: 10pt">
 <tr><td>
   Your email:</td><td>
     <input type="text" name="_replyto" style="width: 80%">
