--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <li>Regulatory Compliance (California State and Federal)</li>
   <li>Distillery Operations Consulting</li>
 </ul>
-
+<br />
 <h2 id="areas-of-extensive-practical-experience">&nbsp; &nbsp; Areas of Extensive Practical Experience</h2>
 <ul>
   <li>General
@@ -93,7 +93,7 @@
   </li>
   
 </ul>
-      <h2>&nbsp; &nbsp; Reach Out - We're Friendly</h2>
+      <h2>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Reach Out - We're Friendly</h2>
       <form
   action="https://formspree.io/f/mgepbjvq"
   method="POST"
