--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
   </li>
   
 </ul>
-      <h2>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Reach Out - We're Friendly</h2>
+      <br /><br />
+      <h2 align="center">Reach Out - We're Friendly</h2>
       <form
   action="https://formspree.io/f/mgepbjvq"
   method="POST"
