--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
       <li>Compliance logging</li>
       <li>Density meter maintenance</li>
       <li>FDA registration &amp; regulation</li>
-      <li>Batch/cut by weight or volume</li>
-      <li>Miscibility/contraction issues</li>
+      <li>Batch/cut by weight or volume using <a href="https://www.katmarsoftware.com/alcodens.htm">AlcoDens</a> blending software</li>
+      <li>Miscibility/contraction issues</li>     
+
     </ul>
   </li>
   <li>TTB / Federal
@@ -80,7 +81,7 @@
       <li>Class/Type and blending/formulation regulations</li>
       <li>Fill Check QC</li>
       <li>Determining proof using precision hydrometer/thermometer for bottling and for labeling</li>
-      <li>Operating TTB-approved Rudolph Research Density Meter DDM2911+</li>
+      <li>Operating TTB-approved <a href="https://rudolphresearch.com/products/density-meters/ddm-2911/">Rudolph Research Density Meter DDM2911+</a></li>
       <li>Operational Reporting &amp; Excise Returns (paper/pay.gov)</li>
     </ul>
   </li>
