--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <ul>
       <li>Beverage Formulation</li>
       <ul><li>Spirits: Rum, Gin, Flavored Vodka, Whiskey</li>
-        <li>RTD: Sodas, Seltzers, Canned Cocktails</li>
+        <li><abbr title="Ready To Drink">RTD</abbr>: Sodas, Seltzers, Canned Cocktails</li>
         <li>Non-Alcoholic: Sparking Beverages, Energy Drinks, Healthy / Organic / Natural</li></ul>
       <li>Distillery &amp; Lab Best Practices</li>
       <li>Compliance logging</li>
