--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 <tr><td>
   Your email:</td><td>
     <input type="text" name="_replyto" style="width: 80%">
-        </td></tr><tr><td valign="top">
+        </td></tr><tr><td style="vertical-align: top">
         Your message:</td><td>
-    <textarea name="message" style="width: 100%; height: 30pt"></textarea>
+    <textarea name="message" style="width: 100%; height: 60pt"></textarea>
   </td></tr><tr><td></td><td><button type="submit">Send</button></td></tr>
 </table>
 </form>
