--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ function decodeEmail(encodedString) {
       <li>Class/Type and blending/formulation regulations</li>
       <li>Fill Check QC</li>
       <li>Determining proof using precision hydrometer/thermometer for bottling and for labeling</li>
-      <li>Operating TTB-approved <a href="https://rudolphresearch.com/products/density-meters/ddm-2911/">Rudolph Research Density Meter DDM2911+</a></li>
+      <li>Operating TTB-approved Density Meters such as the <a href="https://rudolphresearch.com/products/density-meters/ddm-2911-plus/">Rudolph Research DDM2911+</a></li>
       <li>Operational Reporting &amp; Excise Returns (paper/pay.gov)</li>
     </ul>
   </li>
