--- a/index.html
+++ b/index.html
@@ -103,21 +103,22 @@ function decodeEmail(encodedString) {
 <ul>
   <li>Beverage Formulation (alcoholic and non-alcoholic)</li>
   <li>Regulatory Compliance (California State and Federal)</li>
-  <li>Distillery Operations Consulting</li>
+  <li>Distillery &amp; Rectifier Operations Consulting</li>
 </ul>
 <br />
 <h2 id="areas-of-extensive-practical-experience">&nbsp; &nbsp; Areas of Extensive Practical Experience</h2>
 <ul>
       <li>Beverage Formulation</li>
       <ul><li>Spirits: Rum, Gin, Flavored Vodka, Whiskey</li>
-        <li><abbr title="Ready To Drink">RTD</abbr>: Sodas, Seltzers, Canned Cocktails</li>
-        <li>Non-Alcoholic: Sparking Beverages, Energy Drinks, Healthy / Organic / Natural</li></ul>
+        <li><abbr title="Ready To Drink">RTDs</abbr>: Canned Cocktails, Seltzers, Sodas</li>
+        <li>Non-Alcoholic: Sparking Beverages, Energy Drinks, Healthy / Organic / Natural</li>
+        <li>Speciality: CBD / THC, Smoothies, Nut Butters, Seeds</li></ul>
       <li>Distillery &amp; Lab Best Practices</li>
-      <li>Compliance logging</li>
-      <li>Density meter maintenance</li>
-      <li>FDA registration &amp; regulation</li>
+      <li>Data logging for regulatory compliance</li>
       <li>Batch/cut by weight or volume using <a href="https://www.katmarsoftware.com/alcodens.htm">AlcoDens</a> blending software</li>
-      <li>Miscibility/contraction issues</li>     
+      <li>Production of spirits, RTDs and more</li>
+      <li>Carbonation, canning lines & brite tanks</li>
+      <li>Shelf stability and corrosion testing</li>
 </ul><ul>
   <li>TTB / Federal
     <ul>
